fix: message bar was not visible

--- a/app/static_src/css/pages/_chat.scss
+++ b/app/static_src/css/pages/_chat.scss
@@ -6,3 +6,9 @@
     outline: none !important;
     background-color: transparent;
 }
+
+.message-bar {
+  bottom: 0;
+  width: 80%;
+  opacity: 0.9;
+}
